Fixing the bug with UsersShort being used by authentication.
